@@ -1,16 +1,9 @@
 package org.cloudfoundry.multiapps.controller.process.steps;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.mockito.Mockito.when;
-
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
+import com.sap.cloudfoundry.client.facade.domain.CloudServiceInstance;
+import com.sap.cloudfoundry.client.facade.domain.ImmutableCloudMetadata;
+import com.sap.cloudfoundry.client.facade.domain.ImmutableCloudServiceInstance;
+import com.sap.cloudfoundry.client.facade.domain.ServiceOperation;
 import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.lang3.tuple.Pair;
 import org.cloudfoundry.multiapps.controller.client.lib.domain.CloudServiceInstanceExtended;
@@ -22,10 +15,16 @@ import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Mock;
 
-import com.sap.cloudfoundry.client.facade.domain.CloudServiceInstance;
-import com.sap.cloudfoundry.client.facade.domain.ImmutableCloudMetadata;
-import com.sap.cloudfoundry.client.facade.domain.ImmutableCloudServiceInstance;
-import com.sap.cloudfoundry.client.facade.domain.ServiceOperation;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.mockito.Mockito.when;
 
 class CheckServicesToDeleteStepTest extends SyncFlowableStepTest<CheckServicesToDeleteStep> {
 
@@ -36,25 +35,25 @@ class CheckServicesToDeleteStepTest extends SyncFlowableStepTest<CheckServicesTo
 
     static Stream<Arguments> testExecute() {
         return Stream.of(
-                         // (1) Multiple services in progress
-                         Arguments.of(List.of("service-1", "service-2", "service-3"), List.of("service-1", "service-2", "service-3"),
-                                      Map.ofEntries(Map.entry("service-1", ServiceOperation.State.IN_PROGRESS),
-                                                    Map.entry("service-2", ServiceOperation.State.IN_PROGRESS),
-                                                    Map.entry("service-3", ServiceOperation.State.IN_PROGRESS)),
-                                      List.of("service-1", "service-2", "service-3"), "POLL"),
-                         // (2) One service in progress
-                         Arguments.of(List.of("service-1", "service-2", "service-3"), List.of("service-2", "service-3"),
-                                      Map.ofEntries(Pair.of("service-2", ServiceOperation.State.SUCCEEDED),
-                                                    Pair.of("service-3", ServiceOperation.State.IN_PROGRESS)),
-                                      List.of("service-3"), "POLL"),
-                         // (3) All services are not in progress state
-                         Arguments.of(List.of("service-1", "service-2", "service-3"), List.of("service-1", "service-2"),
-                                      Map.ofEntries(Pair.of("service-1", ServiceOperation.State.SUCCEEDED),
-                                                    Pair.of("service-2", ServiceOperation.State.SUCCEEDED)),
-                                      Collections.emptyList(), "DONE"),
-                         // (4) No services to delete
-                         Arguments.of(Collections.emptyList(), Collections.emptyList(), Collections.emptyMap(), Collections.emptyList(),
-                                      "DONE"));
+            // (1) Multiple services in progress
+            Arguments.of(List.of("service-1", "service-2", "service-3"), List.of("service-1", "service-2", "service-3"),
+                         Map.ofEntries(Map.entry("service-1", ServiceOperation.State.IN_PROGRESS),
+                                       Map.entry("service-2", ServiceOperation.State.IN_PROGRESS),
+                                       Map.entry("service-3", ServiceOperation.State.IN_PROGRESS)),
+                         List.of("service-1", "service-2", "service-3"), "POLL"),
+            // (2) One service in progress
+            Arguments.of(List.of("service-1", "service-2", "service-3"), List.of("service-2", "service-3"),
+                         Map.ofEntries(Pair.of("service-2", ServiceOperation.State.SUCCEEDED),
+                                       Pair.of("service-3", ServiceOperation.State.IN_PROGRESS)),
+                         List.of("service-3"), "POLL"),
+            // (3) All services are not in progress state
+            Arguments.of(List.of("service-1", "service-2", "service-3"), List.of("service-1", "service-2"),
+                         Map.ofEntries(Pair.of("service-1", ServiceOperation.State.SUCCEEDED),
+                                       Pair.of("service-2", ServiceOperation.State.SUCCEEDED)),
+                         Collections.emptyList(), "DONE"),
+            // (4) No services to delete
+            Arguments.of(Collections.emptyList(), Collections.emptyList(), Collections.emptyMap(), Collections.emptyList(),
+                         "DONE"));
     }
 
     @ParameterizedTest
@@ -95,7 +94,8 @@ class CheckServicesToDeleteStepTest extends SyncFlowableStepTest<CheckServicesTo
                                                                          servicesOperationState.get(serviceName));
             CloudServiceInstanceExtended returnedService = ImmutableCloudServiceInstanceExtended.builder()
                                                                                                 .metadata(ImmutableCloudMetadata.builder()
-                                                                                                                                .guid(UUID.randomUUID())
+                                                                                                                                .guid(
+                                                                                                                                    UUID.randomUUID())
                                                                                                                                 .build())
                                                                                                 .name(serviceName)
                                                                                                 .lastOperation(lastServiceOperation)
@@ -105,7 +105,8 @@ class CheckServicesToDeleteStepTest extends SyncFlowableStepTest<CheckServicesTo
     }
 
     private void prepareApplicationConfiguration() {
-        when(applicationConfiguration.getServiceHandlingMaxParallelThreads()).thenReturn(ApplicationConfiguration.DEFAULT_SERVICE_HANDLING_MAX_PARALLEL_THREADS);
+        when(applicationConfiguration.getServiceHandlingMaxParallelThreads()).thenReturn(
+            ApplicationConfiguration.DEFAULT_SERVICE_HANDLING_MAX_PARALLEL_THREADS);
     }
 
     private void validateExecution(List<String> expectedServicesOperations, String expectedStatus) {
